# django-feedly

./: .gitignore  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.py  test_settings.py
.github/workflows/: ci.yml  release.yml
demo/: app.py  content.py  dev.db  events.py  main.py  manage.py  projects.py  promote.py  spread.py  store.py
demo/demo/: admin.py  app.py  models.py  settings.py  urls.py  views.py  wsgi.py
demo/public/: chooser.jade  delivery.jade  pagedit.jade  product.jade  productview.jade  productwindow.jade  promotegrid.jade  spreadgrid.jade  video.jade
demo/public/css/: bootstrap.min.css  datepicker.min.css  efforia.css
demo/public/img/: Thumbs.db
demo/public/js/: app.js  events.js  globals.js  main.coffee  promoteapp.js  promoteevents.js  sandbox.coffee  spreadapp.js  spreadevents.js  view.coffee
demo/public/json/: elements.json
demo/templates/: base.html  event.html  index.html  project.html  register.html  tutorial.html
demo/templates/context/: interface.html
demo/templates/control/: finish.html  panel.html  password.html  place.html  profile.html  social.html
demo/templates/jade/: content.jade  createapp.jade  enroll.jade  event.jade  eventimage.jade  grab.jade  image.jade  imageview.jade  movement.jade  page.jade  pageview.jade  pledge.jade  project.jade  promote.jade  (+9 more)
feedly/: __init__.py  admin.py  apps.py  core.py  feed.py  forms.py  hooks.py  models.py  payments.py  services.py  tests.py  urls.py  views.py
feedly/migrations/: 0001_initial.py  0002_auto_20200508_2236.py  0003_auto_20200519_2157.py
