[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-feedly"
version = "0.7.0"
description = "A Django app to create list and grid-based feeds."
readme = "README.rst"
license = {text = "LGPLv3 License"}
authors = [
    {name = "William Oliveira de Lagos", email = "william.lagos@icloud.com"},
]
requires-python = ">=3.8"
dependencies = [
    "django>=4.0",
    "django-pure-pagination>=0.3.0",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://williamlagos.github.io/"

[tool.setuptools.packages.find]
include = ["feedly*"]
